--- a/index.html
+++ b/index.html
@@ -1,9 +1,55 @@
 <!DOCTYPE html>
 <html> 
     <head>
-
+        <meta charset="utf-8">
+        <title>A Simple Site</title>
     </head>
     <body>
-        Learning HTML is cool!
+        <h1>Learning HTML is cool!</h1>
+        <h2>Learning HTML is cool!</h2>
+        <p><b><a href="https://www.google.com/" target="_blank">Lorem ipsum</a> dolor sit amet, consectetur adipiscing elit. 
+            Nullam facilisis arcu vel mollis finibus. Nunc facilisis 
+            vel nisl lacinia cursus. Cras suscipit augue sed volutpat 
+            tincidunt. Aenean dictum tincidunt urna, quis eleifend 
+            quam mattis eu. Integer sollicitudin, nisl faucibus aliquam 
+            ullamcorper, metus sapien scelerisque lorem, at ornare dui 
+            orci non orci. Integer tempus consectetur metus, vitae 
+            blandit nibh aliquam nec. Pellentesque vestibulum arcu eget 
+            ante sollicitudin, id accumsan dui molestie. Suspendisse 
+            vehicula semper dui id congue. Suspendisse sed velit sit 
+            amet velit luctus varius. Ut condimentum tincidunt consequat. 
+            Sed eu ligula non magna scelerisque auctor.</b></p>
+        <p><a href="http://www.yahoo.com">Maecenas</a> feugiat iaculis imperdiet. Duis vitae pellentesque 
+            nunc, eget elementum metus. Nulla sollicitudin bibendum nibh, 
+            sit amet semper tortor. Nunc rhoncus non arcu in scelerisque. 
+            Donec magna mauris, congue ac dignissim rutrum, tincidunt 
+            quis leo. Maecenas dictum orci in magna iaculis, in elementum 
+            felis viverra. Aenean sit amet sapien odio. Donec molestie 
+            est et nisl mattis dictum. Nullam at nibh aliquet, tincidunt 
+            lorem et, facilisis enim. Praesent id felis sit amet quam 
+            dignissim volutpat. Nam nec cursus mi, quis tincidunt justo.</p>
+            <ul><li>first</li><li>second</li><li>third</li><li>fourth</li><li>fifth</li></ul>
+
+            <table>
+                <tr>
+                
+                <th>Month</th>
+                <th>Rent</th>
+                <th>Utilities</th>
+                <th>Groceries</th>
+                <th>Eating Out</th>
+                <th>Entertainment</th></tr>
+                <tr>
+                    <td>$1500</td>
+                    <td>&nbsp;</td>
+                    <td>$150</td>
+                    <td>$350</td>
+                    <td>$100</td>
+                    <td>$50</td>
+                    
+                    </tr>
+
+             </table>
+
     </body>
 </html>
