--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
     <head>
         <meta charset="utf-8">
         <title>A Simple Site</title>
+        <style>
+            table, th, td {
+              border: 1px solid ;
+              padding: 10px;
+            }
+            </style>
     </head>
     <body>
         <h1>Learning HTML is cool!</h1>
         <h2>Learning HTML is cool!</h2>
+        <h3>Learning HTML is cool!</h3>
+        <h4>Learning HTML is cool!</h4>
+        <h5>Learning HTML is cool!</h5>
+        <h6>Learning HTML is cool!</h6>
+
         <p><b><a href="https://www.google.com/" target="_blank">Lorem ipsum</a> dolor sit amet, consectetur adipiscing elit. 
             Nullam facilisis arcu vel mollis finibus. Nunc facilisis 
             vel nisl lacinia cursus. Cras suscipit augue sed volutpat 
