--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             vehicula semper dui id congue. Suspendisse sed velit sit 
             amet velit luctus varius. Ut condimentum tincidunt consequat. 
             Sed eu ligula non magna scelerisque auctor.</b></p>
-        <p><a href="http://www.yahoo.com">Maecenas</a> feugiat iaculis imperdiet. Duis vitae pellentesque 
+        <p><i><a href="http://www.yahoo.com">Maecenas</a> feugiat iaculis imperdiet. Duis vitae pellentesque 
             nunc, eget elementum metus. Nulla sollicitudin bibendum nibh, 
             sit amet semper tortor. Nunc rhoncus non arcu in scelerisque. 
             Donec magna mauris, congue ac dignissim rutrum, tincidunt 
@@ -38,7 +38,7 @@
             felis viverra. Aenean sit amet sapien odio. Donec molestie 
             est et nisl mattis dictum. Nullam at nibh aliquet, tincidunt 
             lorem et, facilisis enim. Praesent id felis sit amet quam 
-            dignissim volutpat. Nam nec cursus mi, quis tincidunt justo.</p>
+            dignissim volutpat. Nam nec cursus mi, quis tincidunt justo.</i></p>
             <ul><li>first</li><li>second</li><li>third</li><li>fourth</li><li>fifth</li></ul>
 
             <table>
